--- a/modawanaData.css
+++ b/modawanaData.css
@@ -107,31 +107,47 @@ header{
 
 /* ---------------- watts btn ---------------- */
 .whatsapp-float {
-    position: fixed;
-    width: 80px;
-    height: 80px;
-    bottom: 50px;
-    right:50px;
-    background-color: #25d366;
-    color: #FFF;
-    border-radius: 50%;
-    text-align: center;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.3s;
+position: fixed;
+bottom: 20px;
+right: 20px;
+display: flex;
+align-items: center;
+text-decoration: none;
+z-index: 9999;
 }
-.whatsapp-float:hover {
-    scale: 1.1;
-    box-shadow: 5px 5px 12px #25d366;
-}
-
 
 .whatsapp-float img {
-    width: 35px;
-    height: 35px;
+width: 60px;
+height: 60px;
+border-radius: 50%;
+box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+transition: transform 0.3s;
+z-index: 9999;
+}
+
+.whatsapp-float:hover img {
+transform: scale(1.1);
+z-index: 9999;
+}
+
+.whatsapp-text {
+margin-right: 10px;
+background: #25D366;
+color: white;
+padding: 6px 12px;
+border-radius: 20px;
+font-size: 14px;
+opacity: 0;
+transform: translateX(10px);
+transition: 0.3s ease;
+pointer-events: none;
+white-space: nowrap;
+z-index: 9999;
+}
+
+.whatsapp-float:hover .whatsapp-text {
+opacity: 1;
+transform: translateX(0);
 }
 
 
